--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "wunrry-website",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@9.0.0",
+
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
